src/objects/GAU_Expendature__c.object
<CustomObject>
    <description>Record for the attribution of disbursements to specific funds. Creating these records draws revenue from the related fund. This object can be repurposed for other expendatures from GAUs as well.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to the Disbursement being paid.</description>
        <label>Disbursement</label>
        <referenceTo>outfunds__Disbursement__c</referenceTo>
        <relationshipLabel>GAU Expendatures</relationshipLabel>
        <relationshipName>GAU_Expendatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Accounting_Unit__c</fullName>
        <description>Relationship to the general accounting unit being disbursed.</description>
        <label>General Accounting Unit</label>
        <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>GAU Expendatures</relationshipLabel>
        <relationshipName>GAU_Expendatures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>GAU Expendature</label>
    <nameField>
        <displayFormat>GAUE-{00000}</displayFormat>
        <label>GAU Expendature Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GAU Expendatures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>